00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mtls-apikey
  labels:
    kubernetes.io/metadata.name: mtls-apikey
